docs/css/bolder.css
body,a {
	font-family: "Karla", sans-serif;
	background-color: #000;
	color: #fff;
}

div#form {
	display: flex;
	flex-direction: column;
	gap: 0.25rem;
	align-items: flex-end;
	width: fit-content;
}

label {
	display: flex;
	gap: 1rem;
	align-items: end;
	cursor: pointer;
}

label.gapAfter {
	margin-bottom: 1rem;
}

#-json {
	display: none;
	background-color: blue;
	position: absolute;
	padding: 1rem;
	font-family: monospace;
}

button {
	padding: 0.5rem 1.5rem;
	border: 0px;
	border-radius: 3px;
	font-size: 1rem;
	background-color: #09f;
	color: #fff;
	cursor: pointer;
}

.border {
	position: absolute;
	inset: 2rem;
	border: 1px solid white;
}

.scaled {
	position: absolute;
	inset: 2rem;
	overflow: hidden;
}

#-canvas {
	/* transform: scale(0.25); */
}

.toolbar {
	display: flex;
	gap: 3rem;
	padding-left: 2rem;
}

.entity {
	width: 64px;
	height: 64px;
	position: absolute;
}

.wall {
	background-image: url(../assets/wall.png);
}

.earth {
	background-image: url(../assets/earth.png);
}

.boulder {
	background-image: url(../assets/boulder.png);
}

.safe {
	background-image: url(../assets/safe.png);
}

.key {
	background-image: url(../assets/key.png);
}

.diamond {
	background-image: url(../assets/diamond.png);
}

.bob {
	background-image: url(../assets/bob.png);
	width: 64px;
	height: 64px;
	position: absolute;
}

